vamos a modificar  el boton de agregar para extraer la informacion del iframe

--- a/para_usar_en_pagina/administracion.html
+++ b/para_usar_en_pagina/administracion.html
@@ -58,7 +58,7 @@
                     <button id="remove-last-button">Eliminar Último</button><br>
                     <button id="copy-button">Copiar Todos</button><br>
                 </div>
-                <textarea id="output-text" rows="4" placeholder="Aquí se copian los elementos" class="textarea-multiline" readonly></textarea>
+                <textarea id="texto_a_copiar" rows="4" placeholder="Aquí se copian los elementos" class="textarea-multiline" readonly></textarea>
                 
                 
             </div>
