--- a/para_usar_en_pagina/ventas.html
+++ b/para_usar_en_pagina/ventas.html
@@ -28,9 +28,9 @@
         <button onclick="procesarPedido(); copiarContenido()">Procesar 1</button>
       </tr>
       <tr>
-
+        <td id="infoProducto">Información del Producto</td>
         <td style="width: 250px;" id="contenido">Contenido</td>
-        <td style="width: 250px;" id="infoProducto">Información del Producto</td>
+        
       </tr>
     </table>
 
@@ -41,6 +41,6 @@
     <p>&copy; 2024 EL GREMIO by QU1R30N</p>
   </footer>
   <script src="productos10.js?v=1"></script>
-  <script src="ventas2.js"></script>
+  <script src="ventas5.js"></script>
 </body>
 </html>
