--- a/para_usar_en_pagina/administracion1.html
+++ b/para_usar_en_pagina/administracion1.html
@@ -68,14 +68,14 @@
             <div class="tab-content">
                 <div id="tab1" class="tab-pane active">
                     <h3>Contenido de la Pestaña 1</h3>
-                    <iframe id="iframe1" src="ventas.html" width="100%" height="400px" style="border: none;"></iframe>
+                    <iframe id="iframe1" src="ventas1.html" width="100%" height="400px" style="border: none;"></iframe>
                     
                 </div>
 
 
                 <div id="tab2" class="tab-pane">
                     <h3>Contenido de la Pestaña 2</h3>
-                    <iframe id="iframe2" src="compras.html" width="100%" height="400px" style="border: none;"></iframe>
+                    <iframe id="iframe2" src="compras1.html" width="100%" height="400px" style="border: none;"></iframe>
                     
                 </div>
 
