--- a/para_usar_en_pagina/compras1.html
+++ b/para_usar_en_pagina/compras1.html
@@ -53,7 +53,7 @@
   <footer>
     <p>&copy; 2024 EL GREMIO by QU1R30N</p>
   </footer>
-  <script src="productos10.js?v=1"></script>
-  <script src="compras9.js"></script>
+  <script src="productos_compras.js?v=1"></script>
+  <script src="compras11.js"></script>
 </body>
 </html>
